# WindUSB-GUI

./: .gitignore  Cargo.toml  README.md  build.sh
WindUSB.AppDir/: .DirIcon  AppRun  io.github.windusb.desktop
src/: main.rs
