[package]
name = "windusb-gui"
version = "1.0.1"
authors = ["Broly <jack_sparrow_xv@proton.me>"]
edition = "2021"
description = " Create bootable Windows USB drives on Linux"
license = "GPL-3.0-or-later"

[dependencies]
libc = "0.2"
ctrlc = "3.4"
glib = "0.18"
gtk4 = "0.7"

[dependencies.libadwaita]
version = "0.5"
features = ["v1_2"]
